manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: eplastweb
  labels:
    app: eplastweb  
spec:
  selector:
    matchLabels:
      app: eplastweb
  template:
    metadata:
      labels:
        app: eplastweb 
    spec:  
      containers:
        - name: eplastweb 
          image: eplast.azurecr.io/eplastweb:___containerRegistry_version_frontend_test___
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"          
          ports:
          - containerPort: 80
