manifests/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  namespace: eplast
  name: routing-for-eplast-client
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
  - hosts:
      - ___SiteDnsName___
    secretName: tls-secret-prd
  rules:
  - host: ___SiteDnsName___
    http:
      paths:        
      - backend:
          service
            name: eplastweb
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          service
            name: prometheus-grafana
            port:
              number: 80
        path: /grafana
        pathType: ImplementationSpecific
